--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-haptic-feedback": "^2.2.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
