--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.72.4",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-haptics": "~12.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
