--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "expo": "~49.0.10",
+    "expo-haptics": "~12.4.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-haptic-feedback": "^2.2.0",
-    "yup": "^1.2.0",
-    "expo-haptics": "~12.4.0"
+    "react-native-simple-snackbar": "^1.1.1",
+    "react-native-snackbar": "^2.4.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
